Fix annoying links not have spacing

--- a/theme/static/css/all.sass
+++ b/theme/static/css/all.sass
@@ -69,6 +69,10 @@ a:hover
         margin-right: -4px
         margin-left: -4px
         display: inline
+        \+a
+            margin-left: 0px
+    span + a
+        margin-left: 0px
     tr a
         margin: 0
 
